# dings

./: .gitignore  README.md  dinge.db  page1.html  page2.html  page3.html  page4.html  page5.html  page6.html  page7.html  pyproject.toml
dings/: __main__.py  app.py  cli.py  database.py  fetch.py  search.py
